[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytza500"
version = "2.0"
dependencies = [
  "ftd2xx==1.3.8",
]
requires-python = ">=3.10"

authors = [
  {name = "Christian Neumann", email = "christian.neumann@artifex-engineering.com"},
]
maintainers = [
  {name = "Christian Neumann", email = "christian.neumann@artifex-engineering.com"}
]

description = "Python library for the Artifex Engineering TZA500"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

keywords = ["Artifex", "Artifex Engineering", "Artifex-Engineering", "TZA500", "OPM", "Power monitor", "Optical power monitor"]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",

  "Natural Language :: English",

  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: 3 :: Only",

  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://artifex-engineering.com"
Documentation = "https://github.com/artifex-engineering/pytza500/blob/main/README.md"
Repository = "https://github.com/artifex-engineering/pytza500.git"
Issues = "https://github.com/artifex-engineering/pytza500/issues"
Changelog = "https://github.com/artifex-engineering/pytza500/blob/main/CHANGELOG.md"